--- a/src/GUI/frmLogin.form
+++ b/src/GUI/frmLogin.form
@@ -47,6 +47,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="txtName">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="btnLogin">
       <Properties>
